--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-body, html{background-color: aqua; padding: 15px;      }
+body, html{background-color: aqua; padding: 15px; font-family: Verdana, Geneva, Tahoma, sans-serif}
+
+h2{ font-size: 2rem; color: brown; }
